fix ripple: set z-index to put ripple under link

--- a/demo/css/lumx.css
+++ b/demo/css/lumx.css
@@ -5320,7 +5320,7 @@ html {
 .ripple {
   display: block;
   position: absolute;
-  z-index: 1;
+  z-index: -1;
   background: rgba(255, 255, 255, 0.3);
   border-radius: 100%;
   -webkit-transform: scale(0);
