--- a/scss/main/objects/_objects.ripple.scss
+++ b/scss/main/objects/_objects.ripple.scss
@@ -6,7 +6,7 @@
 .ripple {
 	display: block;
 	position: absolute;
-	z-index: 1;
+	z-index: -1;
 	background: rgba(255, 255, 255, 0.3);
 	border-radius: 100%;
 	@include transform(scale(0));
